@@ -34,6 +34,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14732: The _csv module now uses PEP 3121 module initialization.
+  Patch by Robin Schreiber.
+
 - Issue #14809: Add HTTP status codes introduced by RFC 6585 to http.server
   and http.client. Patch by EungJun Yi.
 
